src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Email_Opt_Out__c</fullName>
        <formula>IF( Contact.HasOptedOutOfEmail = true, &quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Opt Out</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Campaign_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Campaign ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Contact_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Contact ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <formula>Contact.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Country__c</fullName>
        <formula>Contact.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Postal_Code__c</fullName>
        <formula>Contact.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State_Province_Emerite__c</fullName>
        <formula>Contact.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing State/Province/Emerite</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street__c</fullName>
        <formula>Contact.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Street</label>
        <type>Text</type>
    </fields>
</CustomObject>